# RayTracing

./: .gitignore  CMakeLists.txt  README.md
docs/: Working_hours.xlsx
ext/glad/: CMakeLists.txt  glad.c  glad.h
ext/imgui/: CMakeLists.txt
shaders/: FragmentShader.frag  RayTracingKernel.comp  SkyBox.frag  SkyBox.vert  VertexShader.vert
src/: app.cpp  app.h  camera.cpp  camera.h  frameBuffer.cpp  frameBuffer.h  gameObject.cpp  gameObject.h  imguiManager.cpp  imguiManager.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
